Screen movement and vector2 updates

--- a/GravitySimulator/GravitySimulator.vcxproj.filters
+++ b/GravitySimulator/GravitySimulator.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.c">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="vector2.c">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector2.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
