--- a/GravitySimulator/GravitySimulator.vcxproj
+++ b/GravitySimulator/GravitySimulator.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="vector2.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
