--- a/GravitySimulator/GravitySimulator.vcxproj
+++ b/GravitySimulator/GravitySimulator.vcxproj
@@ -20,9 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="quadtree.c" />
     <ClCompile Include="vector2.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.h" />
+    <ClInclude Include="particle.h" />
+    <ClInclude Include="quadtree.h" />
     <ClInclude Include="vector2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
